fix: BaseRequest